# ai_assistant

./: .env.template  .gitignore  404.html  LICENSE  index.html  junit.xml  mkdocs.yml  pyproject.toml  readme.md  run_tests.py  sitemap.xml  test_github_actions.py  versioning_analysis.md
.github/: BRANCH_PROTECTION.md  SECURITY.md
.github/workflows/: branch-protection.yml  deploy-docs.yml  python-tests.yml
api/endpoints/: index.html
app/: main.py
app/api/: routes.py
app/core/: config.py
architecture/overview/: index.html
architecture/tools/: index.html
architecture/workflow/: index.html
development/branch-protection/: index.html
development/contributing/: index.html
development/security-and-api-key-handling/: index.html
development/setup/: index.html
development/testing/: index.html
docs/: index.md
docs/api/: endpoints.md
docs/architecture/: overview.md  tools.md  workflow.md
docs/development/: branch-protection.md  contributing.md  security-and-api-key-handling.md  setup.md  testing.md
docs/tools/: rag.md  searx.md
scripts/: bump_version.py  code_quality.py  docs.py  utils.py
search/: search_index.json
tests/: conftest.py  test_integration.py  test_main.py  test_routes.py
tools/rag/: index.html
tools/searx/: index.html
