[project]
name = "ai-assistant"
version = "0.0.1"
description = "AI assistant integrated with tool-calling."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "langchain[community,openai]>=0.3.27",
    "orjson>=3.11.3",
    "pydantic>=2.11.9",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]
