[project]
name = "ai-assistant"
dynamic = ["version"] 
description = "AI assistant integrated with tool-calling."
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "langchain[community,openai]>=0.3.27",
    "orjson>=3.11.3",
    "pip-audit>=2.9.0",
    "pydantic>=2.11.9",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocstrings-python>=1.18.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
]
